--- a/.github/workflows/main_ubuntu_RDP.yml
+++ b/.github/workflows/main_ubuntu_RDP.yml
@@ -28,9 +28,9 @@ jobs:
     - name: Install Unzipper
       run: sudo apt-get install unzip -y
     - name: Ngrok Downloading(Linux)
-      run: wget -O ngrok.zip https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-linux-arm.tgz
+      run: wget -O ngrok.tgz https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-linux-amd64.tgz
     - name: Ngrok Extracting(Linux)
-      run: unzip ngrok.zip
+      run: tar -xvzf ngrok.tgz
     - name: Ngrok Make Executable
       run: sudo cp ./ngrok /usr/bin/ngrok
     - name: Ngrok Auth
