--- a/.github/workflows/beta_macOS_RDP.yml
+++ b/.github/workflows/beta_macOS_RDP.yml
@@ -35,4 +35,4 @@ jobs:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
       run: |
         ngrok authtoken $NGROK_AUTH_TOKEN
-        ngrok tcp 22
+        ngrok tcp 5900 &
